// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent detail correctly syncs with remote 1`] = `
.c6 {
  cursor: pointer;
}

.c8 {
  cursor: inherit;
}

.c12 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 400px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 16px 0px 16px 16px;
  height: 24px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c4 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #C0392B;
  background-color: #C0392B;
}

.c18 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #F8F8F8;
  cursor: inherit;
  pointer-events: none;
}

.c18:hover {
  opacity: 0.2;
}

.c19 {
  display: grid;
  grid-template-columns: [image] 50px [content] 1fr;
  grid-template-rows: [title] 1fr [body] 1fr;
  grid-column-gap: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 16px;
  opacity: 0.2;
}

.c21 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column: image;
  grid-row: 1 / 3;
  height: 50px;
  width: 100%;
  color: #02A3EE;
  border: 1px solid #02A3EE;
  border-radius: 5px;
}

.c22 {
  grid-column: content;
  grid-row: title;
  color: #02A3EE;
  margin: 0 0 8px 0;
}

.c23 {
  grid-column: content;
  grid-row: body;
  margin: 0;
  color: #F8F8F8;
}

.c15 {
  width: 100%;
}

.c17 {
  width: 100%;
}

.c17 > div {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.c20 {
  margin: 16px 16px 16px 0;
}

.c0 {
  margin: 32px;
}

.c1 {
  display: grid;
  grid-template-columns: [detail] 1fr [controls] 1fr;
  max-width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-column: detail;
}

.c5 {
  padding-right: 40px;
}

.c10 {
  grid-column: controls;
  width: 100%;
  min-width: 0;
}

.c11 {
  width: 100%;
}

.c7 {
  margin-right: 10px;
  color: #F8F8F8;
  cursor: inherit;
}

.c9 {
  margin-top: 16px;
  width: 24px;
  height: 24px;
  color: #363636;
  display: none;
}

.c16 {
  margin-top: 150px;
}

@media (max-width:47.9375em) {
  .c17 > div {
    grid-template-columns: 1fr;
  }
}

@media (max-width:47.9375em) {
  .c11 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c9 {
    display: block;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          color="#C0392B"
        />
        <h1>
          agentName
        </h1>
      </div>
      <table>
        <tbody>
          <tr>
            <td
              className="c5"
            >
              <b>
                External IP address
              </b>
            </td>
            <td
              className="c5"
            >
              unknown
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Operating system
              </b>
            </td>
            <td
              className="c5"
            >
              <i
                className="c6 c7 fab fa-apple"
              />
              darwin
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Architecture
              </b>
            </td>
            <td
              className="c5"
            >
              amd64
            </td>
          </tr>
        </tbody>
      </table>
      <i
        className="c8 c9 fas fa-terminal"
        onClick={[Function]}
      />
    </div>
    <div
      className="c10"
    >
      <div
        className="c11"
      >
        <div
          className="c12 c13"
        >
          <div>
            <h2>
              disconnected
            </h2>
          </div>
        </div>
        <div
          className="c14"
        />
      </div>
    </div>
  </div>
  <div
    className="c15 c16"
  >
    <div
      className="c17"
    >
      <h2>
        Enumeration
      </h2>
      <div>
        <a
          className="c18 c19 c20"
          disabled={true}
          href="/agent/fakeid/action/linpeas"
          onClick={[Function]}
        >
          <i
            className="c21 material-icons"
          >
            assessment
          </i>
          <h4
            className="c22"
          >
            Run LinPEAS
          </h4>
          <p
            className="c23"
          >
            LinPEAS is a script that search for possible paths to escalate privileges on Linux/Unix hosts
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`agent detail deals with property updates correctly 1`] = `
.c6 {
  cursor: pointer;
}

.c8 {
  cursor: inherit;
}

.c12 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 400px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 16px 0px 16px 16px;
  height: 24px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c4 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #C0392B;
  background-color: #C0392B;
}

.c18 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #F8F8F8;
  cursor: inherit;
  pointer-events: none;
}

.c18:hover {
  opacity: 0.2;
}

.c19 {
  display: grid;
  grid-template-columns: [image] 50px [content] 1fr;
  grid-template-rows: [title] 1fr [body] 1fr;
  grid-column-gap: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 16px;
  opacity: 0.2;
}

.c21 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column: image;
  grid-row: 1 / 3;
  height: 50px;
  width: 100%;
  color: #02A3EE;
  border: 1px solid #02A3EE;
  border-radius: 5px;
}

.c22 {
  grid-column: content;
  grid-row: title;
  color: #02A3EE;
  margin: 0 0 8px 0;
}

.c23 {
  grid-column: content;
  grid-row: body;
  margin: 0;
  color: #F8F8F8;
}

.c15 {
  width: 100%;
}

.c17 {
  width: 100%;
}

.c17 > div {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.c20 {
  margin: 16px 16px 16px 0;
}

.c0 {
  margin: 32px;
}

.c1 {
  display: grid;
  grid-template-columns: [detail] 1fr [controls] 1fr;
  max-width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-column: detail;
}

.c5 {
  padding-right: 40px;
}

.c10 {
  grid-column: controls;
  width: 100%;
  min-width: 0;
}

.c11 {
  width: 100%;
}

.c7 {
  margin-right: 10px;
  color: #F8F8F8;
  cursor: inherit;
}

.c9 {
  margin-top: 16px;
  width: 24px;
  height: 24px;
  color: #363636;
  display: none;
}

.c16 {
  margin-top: 150px;
}

@media (max-width:47.9375em) {
  .c17 > div {
    grid-template-columns: 1fr;
  }
}

@media (max-width:47.9375em) {
  .c11 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c9 {
    display: block;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          color="#C0392B"
        />
        <h1>
          newname
        </h1>
      </div>
      <table>
        <tbody>
          <tr>
            <td
              className="c5"
            >
              <b>
                External IP address
              </b>
            </td>
            <td
              className="c5"
            >
              unknown
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Operating system
              </b>
            </td>
            <td
              className="c5"
            >
              <i
                className="c6 c7 fab fa-apple"
              />
              darwin
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Architecture
              </b>
            </td>
            <td
              className="c5"
            >
              amd64
            </td>
          </tr>
        </tbody>
      </table>
      <i
        className="c8 c9 fas fa-terminal"
        onClick={[Function]}
      />
    </div>
    <div
      className="c10"
    >
      <div
        className="c11"
      >
        <div
          className="c12 c13"
        >
          <div>
            <h2>
              disconnected
            </h2>
          </div>
        </div>
        <div
          className="c14"
        />
      </div>
    </div>
  </div>
  <div
    className="c15 c16"
  >
    <div
      className="c17"
    >
      <h2>
        Enumeration
      </h2>
      <div>
        <a
          className="c18 c19 c20"
          disabled={true}
          href="/agent/fakeid/action/linpeas"
          onClick={[Function]}
        >
          <i
            className="c21 material-icons"
          >
            assessment
          </i>
          <h4
            className="c22"
          >
            Run LinPEAS
          </h4>
          <p
            className="c23"
          >
            LinPEAS is a script that search for possible paths to escalate privileges on Linux/Unix hosts
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`agent detail handles sync failure 1`] = `
.c6 {
  cursor: pointer;
}

.c8 {
  cursor: inherit;
}

.c12 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 400px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 16px 0px 16px 16px;
  height: 24px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c4 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #C0392B;
  background-color: #C0392B;
}

.c18 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #F8F8F8;
  cursor: inherit;
  pointer-events: none;
}

.c18:hover {
  opacity: 0.2;
}

.c19 {
  display: grid;
  grid-template-columns: [image] 50px [content] 1fr;
  grid-template-rows: [title] 1fr [body] 1fr;
  grid-column-gap: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 16px;
  opacity: 0.2;
}

.c21 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column: image;
  grid-row: 1 / 3;
  height: 50px;
  width: 100%;
  color: #02A3EE;
  border: 1px solid #02A3EE;
  border-radius: 5px;
}

.c22 {
  grid-column: content;
  grid-row: title;
  color: #02A3EE;
  margin: 0 0 8px 0;
}

.c23 {
  grid-column: content;
  grid-row: body;
  margin: 0;
  color: #F8F8F8;
}

.c15 {
  width: 100%;
}

.c17 {
  width: 100%;
}

.c17 > div {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.c20 {
  margin: 16px 16px 16px 0;
}

.c0 {
  margin: 32px;
}

.c1 {
  display: grid;
  grid-template-columns: [detail] 1fr [controls] 1fr;
  max-width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-column: detail;
}

.c5 {
  padding-right: 40px;
}

.c10 {
  grid-column: controls;
  width: 100%;
  min-width: 0;
}

.c11 {
  width: 100%;
}

.c7 {
  margin-right: 10px;
  color: #F8F8F8;
  cursor: inherit;
}

.c9 {
  margin-top: 16px;
  width: 24px;
  height: 24px;
  color: #363636;
  display: none;
}

.c16 {
  margin-top: 150px;
}

@media (max-width:47.9375em) {
  .c17 > div {
    grid-template-columns: 1fr;
  }
}

@media (max-width:47.9375em) {
  .c11 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c9 {
    display: block;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          color="#C0392B"
        />
        <h1>
          agentName
        </h1>
      </div>
      <table>
        <tbody>
          <tr>
            <td
              className="c5"
            >
              <b>
                External IP address
              </b>
            </td>
            <td
              className="c5"
            >
              unknown
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Operating system
              </b>
            </td>
            <td
              className="c5"
            >
              <i
                className="c6 c7 fab fa-apple"
              />
              darwin
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Architecture
              </b>
            </td>
            <td
              className="c5"
            >
              amd64
            </td>
          </tr>
        </tbody>
      </table>
      <i
        className="c8 c9 fas fa-terminal"
        onClick={[Function]}
      />
    </div>
    <div
      className="c10"
    >
      <div
        className="c11"
      >
        <div
          className="c12 c13"
        >
          <div>
            <h2>
              disconnected
            </h2>
          </div>
        </div>
        <div
          className="c14"
        />
      </div>
    </div>
  </div>
  <div
    className="c15 c16"
  >
    <div
      className="c17"
    >
      <h2>
        Enumeration
      </h2>
      <div>
        <a
          className="c18 c19 c20"
          disabled={true}
          href="/agent/fakeid/action/linpeas"
          onClick={[Function]}
        >
          <i
            className="c21 material-icons"
          >
            assessment
          </i>
          <h4
            className="c22"
          >
            Run LinPEAS
          </h4>
          <p
            className="c23"
          >
            LinPEAS is a script that search for possible paths to escalate privileges on Linux/Unix hosts
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`agent detail opens terminal 1`] = `
.c6 {
  cursor: pointer;
}

.c8 {
  cursor: inherit;
}

.c12 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 400px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 16px 0px 16px 16px;
  height: 24px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c4 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #C0392B;
  background-color: #C0392B;
}

.c18 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #F8F8F8;
  cursor: inherit;
  pointer-events: none;
}

.c18:hover {
  opacity: 0.2;
}

.c19 {
  display: grid;
  grid-template-columns: [image] 50px [content] 1fr;
  grid-template-rows: [title] 1fr [body] 1fr;
  grid-column-gap: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 16px;
  opacity: 0.2;
}

.c21 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column: image;
  grid-row: 1 / 3;
  height: 50px;
  width: 100%;
  color: #02A3EE;
  border: 1px solid #02A3EE;
  border-radius: 5px;
}

.c22 {
  grid-column: content;
  grid-row: title;
  color: #02A3EE;
  margin: 0 0 8px 0;
}

.c23 {
  grid-column: content;
  grid-row: body;
  margin: 0;
  color: #F8F8F8;
}

.c15 {
  width: 100%;
}

.c17 {
  width: 100%;
}

.c17 > div {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.c20 {
  margin: 16px 16px 16px 0;
}

.c0 {
  margin: 32px;
}

.c1 {
  display: grid;
  grid-template-columns: [detail] 1fr [controls] 1fr;
  max-width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-column: detail;
}

.c5 {
  padding-right: 40px;
}

.c10 {
  grid-column: controls;
  width: 100%;
  min-width: 0;
}

.c11 {
  width: 100%;
}

.c7 {
  margin-right: 10px;
  color: #F8F8F8;
  cursor: inherit;
}

.c9 {
  margin-top: 16px;
  width: 24px;
  height: 24px;
  color: #363636;
  display: none;
}

.c16 {
  margin-top: 150px;
}

@media (max-width:47.9375em) {
  .c17 > div {
    grid-template-columns: 1fr;
  }
}

@media (max-width:47.9375em) {
  .c11 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c9 {
    display: block;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          color="#C0392B"
        />
        <h1>
          agentName
        </h1>
      </div>
      <table>
        <tbody>
          <tr>
            <td
              className="c5"
            >
              <b>
                External IP address
              </b>
            </td>
            <td
              className="c5"
            >
              unknown
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Operating system
              </b>
            </td>
            <td
              className="c5"
            >
              <i
                className="c6 c7 fab fa-apple"
              />
              darwin
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Architecture
              </b>
            </td>
            <td
              className="c5"
            >
              amd64
            </td>
          </tr>
        </tbody>
      </table>
      <i
        className="c8 c9 fas fa-terminal"
        onClick={[Function]}
      />
    </div>
    <div
      className="c10"
    >
      <div
        className="c11"
      >
        <div
          className="c12 c13"
        >
          <div>
            <h2>
              disconnected
            </h2>
          </div>
        </div>
        <div
          className="c14"
        />
      </div>
    </div>
  </div>
  <div
    className="c15 c16"
  >
    <div
      className="c17"
    >
      <h2>
        Enumeration
      </h2>
      <div>
        <a
          className="c18 c19 c20"
          disabled={true}
          href="/agent/fakeid/action/linpeas"
          onClick={[Function]}
        >
          <i
            className="c21 material-icons"
          >
            assessment
          </i>
          <h4
            className="c22"
          >
            Run LinPEAS
          </h4>
          <p
            className="c23"
          >
            LinPEAS is a script that search for possible paths to escalate privileges on Linux/Unix hosts
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`agent detail opens terminal 2`] = `
.c6 {
  cursor: pointer;
}

.c8 {
  cursor: inherit;
}

.c12 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 400px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 16px 0px 16px 16px;
  height: 24px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c4 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #C0392B;
  background-color: #C0392B;
}

.c18 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #F8F8F8;
  cursor: inherit;
  pointer-events: none;
}

.c18:hover {
  opacity: 0.2;
}

.c19 {
  display: grid;
  grid-template-columns: [image] 50px [content] 1fr;
  grid-template-rows: [title] 1fr [body] 1fr;
  grid-column-gap: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 16px;
  opacity: 0.2;
}

.c21 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column: image;
  grid-row: 1 / 3;
  height: 50px;
  width: 100%;
  color: #02A3EE;
  border: 1px solid #02A3EE;
  border-radius: 5px;
}

.c22 {
  grid-column: content;
  grid-row: title;
  color: #02A3EE;
  margin: 0 0 8px 0;
}

.c23 {
  grid-column: content;
  grid-row: body;
  margin: 0;
  color: #F8F8F8;
}

.c15 {
  width: 100%;
}

.c17 {
  width: 100%;
}

.c17 > div {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.c20 {
  margin: 16px 16px 16px 0;
}

.c0 {
  margin: 32px;
}

.c1 {
  display: grid;
  grid-template-columns: [detail] 1fr [controls] 1fr;
  max-width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-column: detail;
}

.c5 {
  padding-right: 40px;
}

.c10 {
  grid-column: controls;
  width: 100%;
  min-width: 0;
}

.c11 {
  width: 100%;
}

.c7 {
  margin-right: 10px;
  color: #F8F8F8;
  cursor: inherit;
}

.c9 {
  margin-top: 16px;
  width: 24px;
  height: 24px;
  color: #363636;
  display: none;
}

.c16 {
  margin-top: 150px;
}

@media (max-width:47.9375em) {
  .c17 > div {
    grid-template-columns: 1fr;
  }
}

@media (max-width:47.9375em) {
  .c11 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c9 {
    display: block;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          color="#C0392B"
        />
        <h1>
          agentName
        </h1>
      </div>
      <table>
        <tbody>
          <tr>
            <td
              className="c5"
            >
              <b>
                External IP address
              </b>
            </td>
            <td
              className="c5"
            >
              unknown
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Operating system
              </b>
            </td>
            <td
              className="c5"
            >
              <i
                className="c6 c7 fab fa-apple"
              />
              darwin
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Architecture
              </b>
            </td>
            <td
              className="c5"
            >
              amd64
            </td>
          </tr>
        </tbody>
      </table>
      <i
        className="c8 c9 fas fa-terminal"
        onClick={[Function]}
      />
    </div>
    <div
      className="c10"
    >
      <div
        className="c11"
      >
        <div
          className="c12 c13"
        >
          <div>
            <h2>
              disconnected
            </h2>
          </div>
        </div>
        <div
          className="c14"
        />
      </div>
    </div>
  </div>
  <div
    className="c15 c16"
  >
    <div
      className="c17"
    >
      <h2>
        Enumeration
      </h2>
      <div>
        <a
          className="c18 c19 c20"
          disabled={true}
          href="/agent/fakeid/action/linpeas"
          onClick={[Function]}
        >
          <i
            className="c21 material-icons"
          >
            assessment
          </i>
          <h4
            className="c22"
          >
            Run LinPEAS
          </h4>
          <p
            className="c23"
          >
            LinPEAS is a script that search for possible paths to escalate privileges on Linux/Unix hosts
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`agent detail opens terminal 3`] = `
<div
  className="sc-bCwgka cpPqQQ"
>
  <div
    className="sc-iwaifL bcDlbF"
  >
    <div
      className="sc-lmgQde fNtBws"
    >
      <div
        className="sc-cxNIbT fdtLQN"
      >
        <div
          className="sc-jrsJCI bmKhFO"
          color="#C0392B"
        />
        <h1>
          agentName
        </h1>
      </div>
      <table>
        <tbody>
          <tr>
            <td
              className="sc-iJCRLp kKdtsi"
            >
              <b>
                External IP address
              </b>
            </td>
            <td
              className="sc-iJCRLp kKdtsi"
            >
              unknown
            </td>
          </tr>
          <tr>
            <td
              className="sc-iJCRLp kKdtsi"
            >
              <b>
                Operating system
              </b>
            </td>
            <td
              className="sc-iJCRLp kKdtsi"
            >
              <i
                className="sc-bdnylx sc-bYwzba kAOcqP erDHdr fab fa-apple"
              />
              darwin
            </td>
          </tr>
          <tr>
            <td
              className="sc-iJCRLp kKdtsi"
            >
              <b>
                Architecture
              </b>
            </td>
            <td
              className="sc-iJCRLp kKdtsi"
            >
              amd64
            </td>
          </tr>
        </tbody>
      </table>
      <i
        className="sc-bdnylx sc-kLokih iEWuNR jNdfvu fas fa-terminal"
        onClick={[Function]}
      />
    </div>
    <div
      className="sc-giAqnE fHiCCV"
    >
      <div
        className="sc-ezzayL fzoNWW"
      >
        <div
          className="sc-gtssRu sc-gKAblj eJLYUo bNgdcg"
        >
          <div>
            <h2>
              disconnected
            </h2>
          </div>
        </div>
        <div
          className="sc-fujyUd dWblrL"
        />
      </div>
    </div>
  </div>
  <div
    className="sc-ksluoS kiDXUP sc-iklIKw kgTcoj"
  >
    <div
      className="sc-fnVYJo lbWjxS"
    >
      <h2>
        Enumeration
      </h2>
      <div>
        <a
          className="sc-kEqYlL dEthvt sc-iqAbSa lZTyw sc-fFSRdu ebbFiF"
          disabled={true}
          href="/agent/fakeid/action/linpeas"
          onClick={[Function]}
        >
          <i
            className="sc-crzoUp eWJLFD material-icons"
          >
            assessment
          </i>
          <h4
            className="sc-dIsAE bSbXbf"
          >
            Run LinPEAS
          </h4>
          <p
            className="sc-bqGHjH fmWzVN"
          >
            LinPEAS is a script that search for possible paths to escalate privileges on Linux/Unix hosts
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`agent detail renders correctly 1`] = `
.c6 {
  cursor: pointer;
}

.c8 {
  cursor: inherit;
}

.c12 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 400px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 16px 0px 16px 16px;
  height: 24px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c4 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #C0392B;
  background-color: #C0392B;
}

.c18 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #F8F8F8;
  cursor: inherit;
  pointer-events: none;
}

.c18:hover {
  opacity: 0.2;
}

.c19 {
  display: grid;
  grid-template-columns: [image] 50px [content] 1fr;
  grid-template-rows: [title] 1fr [body] 1fr;
  grid-column-gap: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 16px;
  opacity: 0.2;
}

.c21 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column: image;
  grid-row: 1 / 3;
  height: 50px;
  width: 100%;
  color: #02A3EE;
  border: 1px solid #02A3EE;
  border-radius: 5px;
}

.c22 {
  grid-column: content;
  grid-row: title;
  color: #02A3EE;
  margin: 0 0 8px 0;
}

.c23 {
  grid-column: content;
  grid-row: body;
  margin: 0;
  color: #F8F8F8;
}

.c15 {
  width: 100%;
}

.c17 {
  width: 100%;
}

.c17 > div {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.c20 {
  margin: 16px 16px 16px 0;
}

.c0 {
  margin: 32px;
}

.c1 {
  display: grid;
  grid-template-columns: [detail] 1fr [controls] 1fr;
  max-width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-column: detail;
}

.c5 {
  padding-right: 40px;
}

.c10 {
  grid-column: controls;
  width: 100%;
  min-width: 0;
}

.c11 {
  width: 100%;
}

.c7 {
  margin-right: 10px;
  color: #F8F8F8;
  cursor: inherit;
}

.c9 {
  margin-top: 16px;
  width: 24px;
  height: 24px;
  color: #363636;
  display: none;
}

.c16 {
  margin-top: 150px;
}

@media (max-width:47.9375em) {
  .c17 > div {
    grid-template-columns: 1fr;
  }
}

@media (max-width:47.9375em) {
  .c11 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c9 {
    display: block;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          color="#C0392B"
        />
        <h1>
          agentName
        </h1>
      </div>
      <table>
        <tbody>
          <tr>
            <td
              className="c5"
            >
              <b>
                External IP address
              </b>
            </td>
            <td
              className="c5"
            >
              unknown
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Operating system
              </b>
            </td>
            <td
              className="c5"
            >
              <i
                className="c6 c7 fab fa-apple"
              />
              darwin
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Architecture
              </b>
            </td>
            <td
              className="c5"
            >
              amd64
            </td>
          </tr>
        </tbody>
      </table>
      <i
        className="c8 c9 fas fa-terminal"
        onClick={[Function]}
      />
    </div>
    <div
      className="c10"
    >
      <div
        className="c11"
      >
        <div
          className="c12 c13"
        >
          <div>
            <h2>
              disconnected
            </h2>
          </div>
        </div>
        <div
          className="c14"
        />
      </div>
    </div>
  </div>
  <div
    className="c15 c16"
  >
    <div
      className="c17"
    >
      <h2>
        Enumeration
      </h2>
      <div>
        <a
          className="c18 c19 c20"
          disabled={true}
          href="/agent/fakeid/action/linpeas"
          onClick={[Function]}
        >
          <i
            className="c21 material-icons"
          >
            assessment
          </i>
          <h4
            className="c22"
          >
            Run LinPEAS
          </h4>
          <p
            className="c23"
          >
            LinPEAS is a script that search for possible paths to escalate privileges on Linux/Unix hosts
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;
